--- a/Ejercicio Regularizadores.ipynb
+++ b/Ejercicio Regularizadores.ipynb
@@ -70,7 +70,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +126,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +208,7 @@
       "metadata": {
         "id": "6JnVLVfsAfkh"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
       "metadata": {
         "id": "qKyJ8KOT0aFt"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -247,7 +247,7 @@
       "metadata": {
         "id": "_yQ7SpOt0cBp"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -273,7 +273,7 @@
       "metadata": {
         "id": "bJrRNc4WwPN2"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -300,7 +300,7 @@
       "metadata": {
         "id": "Mafxp6D3wYQx"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -333,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +364,7 @@
       "metadata": {
         "id": "Ff0HC3NR9ez8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -379,7 +379,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +462,7 @@
           "height": 295
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -491,7 +491,7 @@
           "height": 295
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -528,7 +528,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,7 +559,7 @@
       "metadata": {
         "id": "zL3Gp7wvFRq3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -574,7 +574,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -657,7 +657,7 @@
           "height": 295
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -686,7 +686,7 @@
           "height": 295
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -723,7 +723,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,7 +754,7 @@
       "metadata": {
         "id": "UCdA0K_qyTUq"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -769,7 +769,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -852,7 +852,7 @@
           "height": 295
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -881,7 +881,7 @@
           "height": 295
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -918,7 +918,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -949,7 +949,7 @@
       "metadata": {
         "id": "VJzs9A2yzPhx"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -964,7 +964,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1047,7 +1047,7 @@
           "height": 295
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1076,7 +1076,7 @@
           "height": 295
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1113,7 +1113,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1146,7 +1146,7 @@
       "metadata": {
         "id": "pT-13IKI1UpW"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1161,7 +1161,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1244,7 +1244,7 @@
           "height": 295
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1273,7 +1273,7 @@
           "height": 295
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1311,7 +1311,7 @@
           "height": 328
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1346,7 +1346,15 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Viendo las distintos resultados obtenidos al realizar los diversos modelos comprobamos que el modelo que mejor actúa es el modelo en que utilizamos dropout.\n",
+        "\n",
+        "En cuanto a los regularizadores l1 y l2, tenemos que el mejor modelo es aquel en el que utilizamos el regularizador l2 que es el más parecido al modelo en el cual empleamos dropout.\n",
+        "\n",
+        "Por último se encuentran los modelos en los que empleamos el regularizador l1 y l1 con l2 que son iguales prácticamente pero peores que los otros dos casos mencionados anteriormente.\n",
+        "\n",
+        "Claramente los modelos en los que utilizamos regularizadores son mucho mejores que el caso en el cual no utilizamos ninguno de ellos.\n"
+      ],
       "metadata": {
         "id": "cB_OYjjaChzN"
       }
