--- a/Ejercicio Regularizadores.ipynb
+++ b/Ejercicio Regularizadores.ipynb
@@ -1347,7 +1347,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Viendo las distintos resultados obtenidos al realizar los diversos modelos comprobamos que el modelo que mejor actúa es el modelo en que utilizamos dropout.\n",
+        "Viendo los distintos resultados obtenidos al realizar los diversos modelos comprobamos que el modelo que mejor actúa es el modelo en que utilizamos dropout.\n",
         "\n",
         "En cuanto a los regularizadores l1 y l2, tenemos que el mejor modelo es aquel en el que utilizamos el regularizador l2 que es el más parecido al modelo en el cual empleamos dropout.\n",
         "\n",
