--- a/Ejercicio Regularizadores.ipynb
+++ b/Ejercicio Regularizadores.ipynb
@@ -1347,13 +1347,27 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Pérdidas de validación de cada uno de los modelos:\n",
+        "\n",
+        "Caso 0   0.13\n",
+        "\n",
+        "Caso 1   0.45\n",
+        "\n",
+        "Caso 2   0.14\n",
+        "\n",
+        "Caso 3   0.44\n",
+        "\n",
+        "Caso 4   0.09\n",
+        "\n",
         "Viendo los distintos resultados obtenidos al realizar los diversos modelos comprobamos que el modelo que mejor actúa es el modelo en que utilizamos dropout.\n",
         "\n",
         "En cuanto a los regularizadores l1 y l2, tenemos que el mejor modelo es aquel en el que utilizamos el regularizador l2 que es el más parecido al modelo en el cual empleamos dropout.\n",
         "\n",
         "Por último se encuentran los modelos en los que empleamos el regularizador l1 y l1 con l2 que son iguales prácticamente pero peores que los otros dos casos mencionados anteriormente.\n",
         "\n",
-        "Claramente los modelos en los que utilizamos regularizadores son mucho mejores que el caso en el cual no utilizamos ninguno de ellos.\n"
+        "En este caso los modelos con regularizadores no mejoran al modelo base porque la mayor precisión la tiene este modelo y la pérdida es muy parecida al mejor modelo con regularizador.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "cB_OYjjaChzN"
